--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "d2d",
+  "name": "d2d-tecnologia",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,7 +12,10 @@
     "react-router-dom": "^7.12.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "@supabase/supabase-js": "2.39.3",
+    "jspdf": "2.5.1",
+    "jspdf-autotable": "3.8.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
