--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-router-dom": "^7.12.0",
-    "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@supabase/supabase-js": "2.39.3",
+    "react-router-dom": "7.1.0",
+    "lucide-react": "0.460.0",
+    "@supabase/supabase-js": "2.46.1",
     "jspdf": "2.5.1",
-    "jspdf-autotable": "3.8.1"
+    "jspdf-autotable": "3.8.3",
+    "chart.js": "4.4.1",
+    "react-chartjs-2": "5.2.0",
+    "@google/genai": "0.21.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
